<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <android.support.v7.widget.AppCompatImageView
        android:id="@+id/iv_user_icon"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/content_description"
        android:tint="@color/colorLight"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.19"
        app:srcCompat="@drawable/ic_account_circle" />

    <TextView
        android:id="@+id/setupLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:labelFor="@id/firstName"
        android:text="@string/profile_label_setup"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/colorLight"
        app:layout_constraintBottom_toTopOf="@+id/iv_user_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/firstNameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:labelFor="@id/firstName"
        android:text="@string/profile_label_first_name"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/colorLight"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_user_icon" />

    <AutoCompleteTextView
        android:id="@+id/firstName"
        android:layout_width="0dp"
        android:layout_height="28dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:background="@android:color/transparent"
        android:inputType="textPersonName"
        android:textColor="@color/colorLight"
        android:textCursorDrawable="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/firstNameLabel" />

    <View
        android:id="@+id/firstNameLine"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginTop="4dp"
        android:background="@color/colorLight"
        app:layout_constraintLeft_toLeftOf="@+id/firstName"
        app:layout_constraintRight_toRightOf="@+id/firstName"
        app:layout_constraintTop_toBottomOf="@+id/firstName" />

    <TextView
        android:id="@+id/lastNameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:labelFor="@id/lastName"
        android:text="@string/profile_label_last_name"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/colorLight"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/firstNameLine" />

    <AutoCompleteTextView
        android:id="@+id/lastName"
        android:layout_width="0dp"
        android:layout_height="28dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:background="@android:color/transparent"
        android:inputType="textPersonName"
        android:textColor="@color/colorLight"
        android:textCursorDrawable="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lastNameLabel" />

    <View
        android:id="@+id/lastNameLine"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginTop="4dp"
        android:background="@color/colorLight"
        app:layout_constraintLeft_toLeftOf="@+id/lastName"
        app:layout_constraintRight_toRightOf="@+id/lastName"
        app:layout_constraintTop_toBottomOf="@+id/lastName" />

    <TextView
        android:id="@+id/displayNameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:labelFor="@id/displayName"
        android:text="@string/profile_label_display_name"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/colorLight"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lastNameLine" />

    <AutoCompleteTextView
        android:id="@+id/displayName"
        android:layout_width="0dp"
        android:layout_height="28dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:background="@android:color/transparent"
        android:inputType="textPersonName"
        android:textColor="@color/colorLight"
        android:textCursorDrawable="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/displayNameLabel" />

    <View
        android:id="@+id/displayNameLine"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginTop="4dp"
        android:background="@color/colorLight"
        app:layout_constraintLeft_toLeftOf="@+id/displayName"
        app:layout_constraintRight_toRightOf="@+id/displayName"
        app:layout_constraintTop_toBottomOf="@+id/displayName" />

    <Button
        android:id="@+id/saveButton"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:background="@color/colorLoginButton"
        android:text="@string/profile_label_save"
        android:textAllCaps="true"
        android:textColor="@color/colorLight"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/displayNameLine" />
</android.support.constraint.ConstraintLayout>